--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,10 +7,10 @@
 }
 body{
   height: 100vh;
-  display: flex;
+  /* display: flex; */
   justify-content: center;
   align-items: center;
-  padding: 10px;
+  /* padding: 10px; */
   background: linear-gradient(135deg, #71b7e6, #9b59b6);
 }
 .container{
